<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select_back"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_level" />

        <Button
            android:id="@+id/level_easy"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/easy"
            android:textSize="15sp" 
            android:onClick="easy"/>

        <Button
            android:id="@+id/level_normal"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/normal"
            android:textSize="15sp" 
            android:onClick="normal"/>

        <Button
            android:id="@+id/level_hard"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/hard"
            android:textSize="15sp" 
            android:onClick="hard"/>

        <Button
            android:id="@+id/level_help"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/help"
            android:textSize="15sp" 
            android:onClick="help"/>

        <Button
            android:id="@+id/level_quit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/quit"
            android:textSize="15sp" 
            android:onClick="quit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>